[package]
name = "grpc_sample2"
version = "0.1.0"
authors = ["ryutah <ryuta0221@gmail.com>"]

[lib]
doctest = false
test = false

[dependencies]
grpc = "~0.4"
protobuf = "~1.6"
futures = "0.1.*"
futures-cpupool = "0.1.*"
tls-api = "0.1.*"
tls-api-native-tls = "0.1.*"
httpbis = "~0.6"
env_logger = "0.4.*"

[build-dependencies]
protoc-rust-grpc = "*"

[[bin]]
name = "greeter_client"
test = false

[[bin]]
name = "greeter_server"
test = false
